--- a/RMA/src/app/home/home.component.html
+++ b/RMA/src/app/home/home.component.html
@@ -1,1 +1,57 @@
-<p>home works!</p>
+<main>
+
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="bd-placeholder-img" aria-hidden="true"  focusable="false" src="assets/one.jpg">
+        </div>
+        <div class="carousel-item">
+            <img class="bd-placeholder-img" aria-hidden="true"  focusable="false" src="assets/three.webp">
+        </div>
+        <div class="carousel-item">
+            <img class="bd-placeholder-img" aria-hidden="true"  focusable="false" src="assets/two.jpg">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  
+  
+    <div class="container marketing">
+  
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+  
+          <h2>Geranium</h2>
+          <p>Fill your plate up with tasty continental food at this incredible restaurant located in the heart of Bangalore. A jolly ambiance, lively staff, and aromatic food waiting to be gorged upon await you at The Only Place.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+  
+          <h2>Central</h2>
+          <p>Truffles have built a reputation in Bangalore for having mean burgers and delicious steak. Out of all the best restaurants in Bangalore, this one, probably, has the most amount of reserved tables for a fast-food</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+          <h2>Disfrutar</h2>
+          <p>Favorite among the regulars in Bangalore, Smally’s cafe gives away a small-town cafe charm with both indoor and outdoor seating to provide a pleasant ambiance for its visitors.</p>
+        </div>
+      </div>
+    
+      <hr class="featurette-divider">
+  
+    </div>
+  </main>
